fixed overflowing problem upto 320 px

--- a/Sass/style.scss
+++ b/Sass/style.scss
@@ -11,6 +11,8 @@ body {
   transition: width 5s;
 }
 
+
+
 .product-grids {
 
 
@@ -32,7 +34,7 @@ body {
 
 .products {
 
-  min-width: 18rem;
+  width: 18rem;
 }
 
 
@@ -83,7 +85,14 @@ img{
     width: 25rem;
   }
 }
-
+@media screen and (max-width: 767px) {
+ .lg-customers{
+  width: 100%;
+ } 
+ .products{
+  width: 100%;
+ }
+}
 
 .USP {
   
